tests/golden/errors/complex_zero_division.py
z = 1 + 2j
d = 0j
print(z / d)
